--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy to Cloud Run
+name: Build & Deploy to AWS ECS
 
 on:
   push:
@@ -6,44 +6,50 @@ on:
       - main
 
 env:
-  IMAGE_NAME: my-node-app
-  SERVICE_NAME: my-node-app
-  REGION: ${{ secrets.GCP_REGION }}
-  PROJECT_ID: ${{ secrets.GCP_PROJECT }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  ECR_REPOSITORY: my-node-app
+  ECS_CLUSTER: my-node-cluster
+  ECS_SERVICE: my-node-service
+  ECS_TASK_DEFINITION: ecs-task-def.json
 
 jobs:
   build-and-deploy:
-    name: Build Docker Image and Deploy to Cloud Run
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT }}
-        export_default_credentials: true
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-    - name: Configure Docker to use gcloud as a credential helper
+    - name: Login to Amazon ECR
       run: |
-        gcloud auth configure-docker --quiet
+        aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
+        docker login --username AWS --password-stdin \
+        ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
     - name: Build Docker image
       run: |
-        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }} .
+        docker build -t ${{ env.ECR_REPOSITORY }} .
 
-    - name: Push Docker image to Google Container Registry
+    - name: Tag Docker image
       run: |
-        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}
+        docker tag ${{ env.ECR_REPOSITORY }}:latest \
+        ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:latest
 
-    - name: Deploy to Cloud Run
+    - name: Push Docker image to Amazon ECR
       run: |
-        gcloud run deploy ${{ env.SERVICE_NAME }} \
-          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }} \
-          --region ${{ env.REGION }} \
-          --platform managed \
-          --allow-unauthenticated \
-          --quiet
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:latest
+
+    - name: Deploy to Amazon ECS
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
