--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/github-deploy-role
-          aws-region: ap-southeast-1
+          aws-region: ap-southeast-2
 
       - name: Build and push Docker image
         run: |
@@ -28,10 +28,10 @@ jobs:
           aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
           docker push ${{ secrets.ECR_REPO }}:latest
 
-
       - name: Force ECS service to redeploy
         run: |
           aws ecs update-service \
             --cluster my-cluster \
             --service my-service \
-            --force-new-deployment
+            --force-new-deployment \
+            --region ap-southeast-2
