--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/github-deploy-role
+          role-to-assume: arn:aws:iam::<488453322320>:role/github-deploy-role
           aws-region: ap-southeast-2
 
       - name: Build and push Docker image
@@ -31,7 +31,7 @@ jobs:
       - name: Force ECS service to redeploy
         run: |
           aws ecs update-service \
-            --cluster my-cluster \
-            --service my-service \
+            --cluster my-node-cluster \
+            --service my-node-task-service \
             --force-new-deployment \
             --region ap-southeast-2
