--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,18 +22,11 @@ jobs:
           role-to-assume: arn:aws:iam::488453322320:role/github-actions-deployer
           aws-region: ap-southeast-2
 
-      - name: Log in to Amazon ECR
-        run: |
-          aws ecr get-login-password --region ap-southeast-2 \
-            | docker login --username AWS --password-stdin 488453322320.dkr.ecr.ap-southeast-2.amazonaws.com
-
       - name: Build and push Docker image
         run: |
-          IMAGE_TAG=latest
-          IMAGE_URI=488453322320.dkr.ecr.ap-southeast-2.amazonaws.com/${{ secrets.ECR_REPO }}:$IMAGE_TAG
-
-          docker build -t $IMAGE_URI .
-          docker push $IMAGE_URI
+          docker build -t ${{ secrets.ECR_REPO }}:latest .
+          aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
+          docker push ${{ secrets.ECR_REPO }}:latest
 
       - name: Force ECS service to redeploy
         run: |
