--- a/load-test.yml
+++ b/load-test.yml
@@ -1,9 +1,10 @@
 config:
-  target: "cloud2-production.up.railway.app"  # เปลี่ยนเป็น ALB DNS ของคุณ
+  target: "https://cloud2-production.up.railway.app" 
   phases:
     - duration: 60
       arrivalRate: 10
 scenarios:
   - flow:
       - get:
-          url: "/"
+          url: "/"  # ✅ endpoint ที่จะยิง
+
